# welcome-veloxos

./: .gitignore  AppImageBuilder.yml  Cargo.toml  LICENSE  PKGBUILD  build_appimage.sh  main.py  readme.md  requirements.txt  welcome-veloxos.desktop
.github/workflows/: release.yml
functions/: config_manager.py  functions.py  system_info.py  translations.py
gui/: gui.py
scripts/: install_nvidia.sh
src/: callbacks.rs  config.rs  main.rs  system_info.rs
style/: style.qss
ui/: main.slint
ui/modules/: components.slint  content.slint  sidebar.slint
