[package]
name = "welcome-veloxos"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.15", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2" # <--- Das hier ist die Lösung
] }
sysinfo = "0.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.15"